# Context-Studio

./: .gitignore  README.md  casbin_model.conf  implementation_plan.md  implementation_plan.md.metadata.json  implementation_plan_v  implementation_plan_v2.md  implementation_plan_v2_with_paper.md  implementation_plan_v4_python.md  implementation_plan_v5_frameworks.md  implementation_plan_v6_rbac.md  implementation_plan_v7_cleanup_mcp.md  implementation_plan_v8_casbin.md  memory_sdk.py  package-lock.json  package.json  pyproject.toml  requirements.txt  requirements_document.md  task.md  test-engine.js  test_security.py  walkthrough.md
apps/web/: package.json
apps/web/app/: globals.css  layout.tsx  (+1 more)
apps/workflow-engine/: package.json
context_studio/: client.py
context_studio/api/: main.py
context_studio/auth/: casbin_enforcer.py  casbin_model.conf
context_studio/core/: config.py  conversational_memory.py  episodic_memory.py  extractor.py  governance.py  intent_planner.py  retrieval.py  semantic_memory.py  specialized_memory.py  working_memory.py
context_studio/eval/: metrics.py
context_studio/integrations/: autogen.py  crewai.py  google_adk.py  langchain.py  mcp_server.py
context_studio/llm/: __init__.py  provider.py
context_studio/providers/: base.py
context_studio_python/: database.py  main.py  memory_sdk.py  models.py  requirements.txt  schemas.py  test_integration.py  test_langchain.py
context_studio_python/integrations/: langchain_wrapper.py
integrations/: langchain_wrapper.py  mcp_server.py
tests/: test_memory_layers.py  test_retrieval.py
(+16 files in other folders)
