[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "context-studio"
version = "5.0.0"
description = "Context Studio: Production-ready 5-tier memory layer for AI agents"
authors = [
    { name="kira082", email="vijay.bhavesh082@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.0.0",
    "numpy>=1.24.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "casbin>=3.0.0",
    "litellm>=1.0.0"
]

[project.optional-dependencies]
faiss = ["faiss-cpu>=1.7.4", "numpy>=1.24.0"]
postgres = ["psycopg2-binary>=2.9.0", "asyncpg>=0.28.0"]
qdrant = ["qdrant-client>=1.6.0"]
neo4j = ["neo4j>=5.14.0"]
mcp = ["mcp>=0.1.0"]
langchain = ["langchain-core>=0.1.0"]
all = [
    "faiss-cpu>=1.7.4", "numpy>=1.24.0",
    "psycopg2-binary>=2.9.0", "asyncpg>=0.28.0",
    "qdrant-client>=1.6.0",
    "neo4j>=5.14.0",
    "mcp>=0.1.0",
    "langchain-core>=0.1.0"
]

[project.scripts]
context-studio = "context_studio.api.main:app"
context-studio-mcp = "context_studio.integrations.mcp_server:run_mcp_server"
